--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Top section -->
     <div class="py-3 bg-white text-center">
         <div class="container">
-            <h2 class="text-secondary display-2 my-3">Ninja Quiz</h2>
+            <h2 class="text-secondary display-2 my-3">Quiz</h2>
         </div>
     </div>
 
     <div class="res py-4 d-none bg-light text-center">
         <div class="container lead">
             <p>
-                You are <span class="text-secondary p-3 display-3">0/100</span> ninja
+                You are <span class="text-secondary p-3 display-3">0/100</span>Correct!
             </p>
         </div>
     </div>
@@ -28,7 +28,7 @@
             <form class="quiz-form text-light">
                 <div class="my-5">
                     <p class="lead font-weight-light">
-                        1. How do you give a ninja directions?
+                        1. How do you give directions?
                     </p>
                     <div class="my-2 form-check text-white-50">
                         <input type="radio" name="Q1" value="A" checked>
@@ -36,12 +36,12 @@
                     </div>
                     <div class="my-2 form-check text-white-50">
                         <input type="radio" name="Q1" value="B">
-                        <label class="form check-label">Ninja finds you</label>
+                        <label class="form check-label">Tell orally</label>
                     </div>
                 </div>
                 <div class="my-5">
                     <p class="lead font-weight-light">
-                        2. 2apples, one for yoshi one for mario, left?
+                        2. 2 apples, one for you one for me, left?
                     </p>
                     <div class="my-2 form-check text-white-50">
                         <input type="radio" name="Q2" value="A" checked>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="my-2 form-check text-white-50">
                         <input type="radio" name="Q2" value="B">
-                        <label class="form check-label">zero, two corpes</label>
+                        <label class="form check-label">zero</label>
                     </div>
                 </div>
                 <div class="my-5">
